2003-04-04  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/scripts/trial.py: Now takes whatever you throw at it on
	the command line, be it a filename, or a dotted python name for a
	package, module, TestCase, or test method; you no longer need to
	use the -pmcfM switches (unless you really want to).

	* twisted/protocols/htb.py: Egress traffic shaping for Consumers
	and Transports, using Heirarchial Token Buckets, patterened after
	Martin Devera's Hierarchical Token Bucket traffic shaper for the
	Linux kernel.

	* doc/examples/shaper.py: Demonstration of shaping traffic on a
	web server.

	* twisted/protocols/pcp.py: Producer/Consumer proxy, for when you
	wish to install yourself between a Producer and a Consumer and
	subvert the flow of data.

2003-04-04  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/web/microdom.py: parseXML and parseXMLString functions
	that are setup to use the correct settings for strict XML parsing
	and manipulation.

2003-03-31  Brian Warner  <warner@lothar.com>

	* twisted/trial/unittest.py: use SkipTest's argument as a reason
	and display it in the test results instead of the traceback. Allow
	test methods and TestCase classes to define a .skip attribute
	instead of raising SkipTest.

2003-03-31  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/trial/remote.py: machine-readable trial output to allow
	for the test runner and the results Reporter to be in seperate
	processes.

2003-03-15  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/app.py: Renamed "factory" argument to
	Application.listenUDP() to "proto"

2003-03-13  Tommi Virtanen  <tv@twistedmatrix.com>

	* twisted/tap/procmon.py, twisted/plugins.tml: support for mktapping
	ProcessMonitors.

2003-03-11  Bob Ippolito <bob@redivi.com>

	* twisted/internet/: Replaced apply() in non-deprecated
	twisted.internet modules with Direct Function Calls per
	recommendation from PEP 290.

	* twisted/web/client.py: HTTPPageGetter will now write